# three-kingdoms

./: .gitignore  README.md  plan.md  prompt.md  pyproject.toml
.github/workflows/: build.yml
src/: ai.py  animations.py  config.py  game.py  logger.py  main.py  resource_generator.py  resource_loader.py  utils.py
src/entities/: __init__.py  army.py  city.py  general.py
src/resources/: README.md
src/scenes/: base_scene.py  battle_scene.py  city_scene.py  menu_scene.py  world_scene.py
src/ui/: __init__.py  button.py  panel.py
tests/: test_ai.py  test_army.py  test_entities.py  test_game.py  test_ui.py
