[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "three-kingdoms"
version = "0.5.2"
description = "三国霸业 - 经典的三国策略游戏"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ganecheng AI", email = "support@ganecheng.ai"}
]
keywords = ["game", "pygames", "three-kingdoms", "strategy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Strategy Games",
]
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ganecheng-ai/three-kingdoms"
Repository = "https://github.com/ganecheng-ai/three-kingdoms.git"

[project.scripts]
three-kingdoms = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["resources/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyinstaller]
name = "three-kingdoms"
console = false
onedir = false
